# makemore

./: .gitignore  .wakatime-project  README.md  bigram.ipynb  bigram2.ipynb  bigramtest.ipynb  gpt-2.1.ipynb  gpt-2.ipynb  gpt-2.py  gpt1.ipynb  gpt1.py  main.py  mlp.ipynb  mlp2-gpu.ipynb  mlp2.ipynb  mlp3.ipynb  pyproject.toml  rnn.ipynb  wave.ipynb
bigram/: bigram-scratch.ipynb  bigram.ipynb
data/: FINAL_STATUS.txt  shutdown_after_training.sh
gpts/: app.py  fineweb.py  gpt-2-draft.ipynb  hellaswag_eval.py  inference.py  train-gpt-2.py  train_babysit.sh
mlp/: demo.py  mlp-gpu.ipynb  mlp.ipynb
