[project]
name = "makemore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataloader>=2.0",
    "gradio>=6.17.3",
    "ipykernel>=7.3.0",
    "matplotlib>=3.10.9",
    "requests>=2.34.2",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.13.0",
]
