[project]
name = "makemore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataloader>=2.0",
    "datasets>=5.0.0",
    "gradio>=6.17.3",
    "ipykernel>=7.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "plt>=0.2.0",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.13.0",
]
